# flutter_local_db

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml  test.sh  test_native.db
.claude/: settings.local.json
.github/workflows/: local_db.yml
android/: build.gradle  build.gradle.kts  settings.gradle
android/src/: AndroidManifest.xml  build.gradle
example/: .flutter-plugins-dependencies  example.dart  example_local_db.dart
example_db.lmdb/: data.mdb  lock.mdb
ios/: Info.plist  flutter_local_db.entitlements  flutter_local_db.podspec  liboffline_first_core.dylib
ios/Classes/: FlutterLocalDbPlugin.swift
ios/Frameworks/: liboffline_first_core.dylib
lib/: flutter_local_db.dart
linux/: CMakeLists.txt  README.md  flutter_local_db_plugin.cc
linux/include/flutter_local_db/: flutter_local_db_plugin.h
macos/: Info.plist  flutter_local_db.entitlements  flutter_local_db.podspec  liboffline_first_core.dylib  liboffline_first_core_arm64.dylib  liboffline_first_core_x86_64.dylib
test/: connection_pool_test.dart  cross_platform_test.dart  database_mock_test.dart  flutter_local_db_crud_operations.dart  flutter_local_db_test.dart  hot_restart_recovery_test.dart  hot_restart_test.dart  logging_security_test.dart  mock_database_test.dart  mock_path.dart  model_serialization_test.dart  native_only_test.dart  platform_detection_test.dart  pure_validation_test.dart  result_system_test.dart  simple_validation_test.dart  web_database_test.dart  web_local_db_test.dart
test_plugin_db.lmdb/: data.mdb  lock.mdb
(+99 files in other folders)
